translations, setup sidekiq for production

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -1,5 +1,6 @@
 ca:
   locale: "Català"
+  contact: Contacte
   salesprice: "preu"
   ca: "català"
   en: "anglès"
@@ -207,12 +208,42 @@ ca:
   #       submit: Desar
   activerecord:
     attributes:
-      realestate:
-        salesprice: "preu"
-        status: "Estat"
+      webrealestate:
+        webrealestate: "Immoble"
+        salesprice: "Preu de venda (aprox.)"
+        rentprice: "Preu de lloguer (aprox.)"
+        status: "Estatus"
         address: "Adreça"
-        city: "Municipi"
-        description: "Descripció de la finca (del registre de propietat)"
+        flatnumber: "Planta"
+        town: "Municipi"
+        town_name: "Municipi"
+        webrstype: "Tipus d'immoble"
+        operation: "Tipus d'operació"
+        surface: "Superficie (m²)"
+        bedrooms: "Número d'habitacions"
+        terrace: "Balcó o terrassa"
+        lift: "Ascensor"
+        owner: "Nom de contacte"
+        email: "E-mail"
+        phone: "Telèfon"
+      realestate:
+        realestate: "Immoble"
+        salesprice: "Preu de venda"
+        rentprice: "Preu de lloguer"
+        status: "Estatus"
+        address: "Adreça"
+        town: "Municipi"
+        town_name: "Municipi"
+        rstype: "Tipus d'immoble"
+        typestreet: "Tipus de via"
+        namestreet: "Nom del carrer"
+        numberstreet: "Número"
+        area: "Zona"
+        postcode: "Codi postal"
+        usurface: "Superficie útil"
+        csurface: "Superficie construida"
+        operation: "Tipus d'operació"
+        ad: "Descripció de la finca"
         seller: "Venedor"
         cadastre: "Ref. Cadastral"
         energy: "Cert. energètic"
