--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -1,6 +1,7 @@
 ca:
   locale: "Català"
   contact: Contacte
+  title: titól
   salesprice: "preu"
   ca: "català"
   en: "anglès"
@@ -207,6 +208,9 @@ ca:
   #     forms:
   #       submit: Desar
   activerecord:
+    models:
+      title:
+        one: 'títol'
     attributes:
       webrealestate:
         webrealestate: "Immoble"
@@ -400,6 +404,12 @@ ca:
       feature:
         name:
           washer: "rentadora"
+      homepage:
+        bheader1: Títol banner
+        bheader2: Primera part text escrit a màquina
+        bdheader1: Segona part text escrit a màquina - 1
+        bdheader2: Segona part text escrit a màquina - 2
+        bbutton: Botó al costat del títol banner
   global:
     forms:
       submit: "Desar"
